# triad

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yaml
src/: main.rs  solver.rs  test.rs
src/lib/: generator.rs  mod.rs  solver.rs
src/resources/: dict.txt
