[package]
name = "triword"
version = "0.1.0"
edition = "2021"
authors = ["cdrani"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde_json = "1.0.114"

[[bin]]
name = "triword"
path = "src/bin/main.rs"
test = false

[lib]
name = "triword"
path = "src/lib/solver.rs"
doctest = false
test = false

[[test]]
name ="test_suite"
path = "src/test.rs"

[profile.release]
strip = "debuginfo"
