[package]
name = "triad"
version = "0.1.0"
edition = "2021"
authors = ["cdrani"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
rand = "0.8.5"
serde_json = "1.0.114"

[[bin]]
name = "triad"
path = "src/bin/main.rs"
test = false

[lib]
name = "triad"
path = "src/lib/mod.rs"
doctest = false
test = false

[[test]]
name ="test_suite"
path = "src/test.rs"

[profile.release]
strip = "debuginfo"
